--- a/components/newuser/newuser.module.css
+++ b/components/newuser/newuser.module.css
@@ -1,18 +1,24 @@
-.signup_container {
-    width: 100%;
-    min-height: 100vh;
-    justify-content: center;
-    align-items: center;
+.newuser_container {
     display: flex;
     flex-direction: column;
-    background: linear-gradient(90deg, rgba(1, 72, 255, 1) 0%, rgba(1, 288, 258, 1) 100%);
+    justify-content: center;
+    align-items: center;
+
+}
+.doctor_container form, .patient_container form {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.signup_form {
+.newuser_form {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
 }
 
 .input {
@@ -22,8 +28,11 @@
     width: 250px;
     height: 25px;
     border: none;
+    color: black;
     border-radius: 25px;
+    outline: none;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
 }
 
 .input:hover {
@@ -36,24 +45,52 @@
     color: black;
 }
 
-
+.textarea {
+    width: 90%;
+    height: 30vh;
+    border-radius: 1rem;
+    outline: none;
+    resize: none;
+    border: none;
+    padding: 1rem;
+    color: black;
+    margin: 1rem;
+}
+.textarea:hover{
+    background-color: #f3f3f3;
+}
 
 .btn {
     color: white;
     font-weight: 800;
     font-size: 18px;
     background: linear-gradient(90deg, rgba(199, 255, 255, 1) 0%, rgba(1, 288, 258, 1) 100%);
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-
     text-align: center;
     width: 150px;
     height: 35px;
     border: none;
     cursor: pointer;
     border-radius: 25px;
-    margin-bottom: 1rem;
-
+    margin: 1rem;
 }
+
 .btn:hover {
     transform: scale(1.075);
+}
+
+.dob {
+    border: none;
+    outline: none;
+    color: black;
+    border-radius: 2rem;
+    padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+}
+.dob:hover{
+    background-color: #f3f3f3;
+}
+
+.newuser_input {
+    background-color: black;
 }
