--- a/components/DoctorCard/doctorcard.module.css
+++ b/components/DoctorCard/doctorcard.module.css
@@ -1,39 +1,52 @@
 .doctor_card_container {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  width: 95%;
+  border: 2px solid white;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  place-items: center;
+  border-radius: 0.5rem;
+  z-index: 2;
 }
 
-.doctor_card {
-    width: 80%;
-    height: 13rem;
-    background-color: #8890ff5e;
-    border-radius: 1rem;
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 60% 40%;
-    place-items: center;
-    margin: 1rem;
+.name_img_container {
+  justify-self: start;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
-.doctor_card_name {
-    grid-column: 1/3; 
+.rating {
+  justify-self: end;
+  margin-right: 2rem;
 }
 
-.doctor_card_location, .doctor_card_number, .doctor_card_type {
-    grid-row: 2/3;
+.bottom_container {
+  grid-column: 1/2;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-top: 1rem;
 }
 
-.doctor_card_view_button {
-    padding: 0.5rem 1rem;
-    border-radius: 0.5rem;
-    border: 1px solid #888fff;
-    cursor: pointer;
+.btn {
+  justify-self: end;
+  margin-right: 2rem;
+  background-color: transparent;
+  border: 2px solid white;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  transition: all 0.2s ease;
 }
 
-.doctor_card_view_button:hover {
-    background-color: #8890ff5e;
+.btn:hover {
+  border: 2px solid gray;
+  color: gray;
+}
+
+.img {
+  border-radius: 0.5rem;
 }
