--- a/components/signUp/signup.module.css
+++ b/components/signUp/signup.module.css
@@ -1,59 +1,9 @@
-.signup_container {
-    width: 100%;
-    min-height: 100vh;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    background: linear-gradient(90deg, rgba(1, 72, 255, 1) 0%, rgba(1, 288, 258, 1) 100%);
-}
-
-.signup_form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.input {
-    margin: 1rem;
-    background-color: #ffffff ;
-    text-align: center;
-    width: 250px;
-    height: 25px;
-    border: none;
-    border-radius: 25px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-.input:hover {
-    background-color: #f3f3f3;
-}
-
-.input:focus {
-    outline: none;
-    background-color: #ffffff;
-    color: black;
-}
-
-
-
-.btn {
-    color: white;
-    font-weight: 800;
-    font-size: 18px;
-    background: linear-gradient(90deg, rgba(199, 255, 255, 1) 0%, rgba(1, 288, 258, 1) 100%);
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-
-    text-align: center;
-    width: 150px;
-    height: 35px;
-    border: none;
-    cursor: pointer;
-    border-radius: 25px;
-    margin-bottom: 1rem;
-
-}
-.btn:hover {
-    transform: scale(1.075);
+.sign_up_form_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  flex-direction: column;
+  gap: 1rem;
 }
