--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #181818;
 }
 
 a {
@@ -13,6 +14,31 @@ a {
 
 * {
   box-sizing: border-box;
-  color: black;
+  margin: 0;
+  color: white;
 }
 
+.btn {
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  transition: all 0.25s ease-in-out;
+}
+
+.btn:hover {
+  color: #c7c7c7;
+  border: 1px solid #c7c7c7;
+}
+
+.input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid white;
+  outline: none;
+  color: white;
+  margin: 1rem;
+  font-size: 1.5rem;
+  width: 30rem;
+}
