--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -3,12 +3,13 @@
   height: 6rem;
   display: flex;
   justify-content: space-between;
+  background-color: #181818;
   align-items: center;
   box-shadow: 0 -10px 20px white;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 5;
+  z-index: 10;
 }
 
 .navbar_container h1 {
