--- a/components/DoctorDescription/doctor.module.css
+++ b/components/DoctorDescription/doctor.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 80%;
+  width: calc(100% - 15rem);
 }
 
 .top_name_container {
@@ -121,7 +121,7 @@
 /* REVIEWS STYLES */
 
 .reviews_container {
-  width: 16%;
+  width: 15rem;
   position: fixed;
   top: 6rem;
   right: 0;
